v8/tests/messages/regression-1050126.out
regression-1050126.js:1: Uncaught SyntaxError: Unexpected token )
function __func(arg1, arg2, arg3,){return arguments.length;};
                                 ^
