v8/tests/messages/regression-1050126.js
function __func(arg1, arg2, arg3,){return arguments.length;};
